# codewars

./: Cargo.toml
rust/: Cargo.toml
rust/src/: count_the_digit.rs  double_cola.rs  dubstep.rs  lib.rs  main.rs  make_upper_case.rs  replace_with_alphabet.rs  reverse_words.rs  rgb_to_hex_conversion.rs  sum_by_factors.rs  sum_of_pairs.rs  summy.rs
src/: lib.rs  prime_gap.rs  quarter_of_year.rs  which_are_in.rs
temp/: Cargo.toml
temp/src/: main.rs
typescript/: package.json  unionOfSquares.ts
