[package]
name = "codewars"
version = "0.1.0"
authors = ["SpicyRicecaker <awesomenessisgolden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
# regex = "1" this sht takes 9 hours to download WTF???